tests/netgen/grid/errors/grid_y_number__1/errors.netgen
Error: The number of nodes must be positive and at least 2 in one direction if there are no attachments.
Quitting (on error).
